[package]
authors = ["Jayson Reis (jaysonsantos) <santosdosreis@gmail.com>"]
license = "MIT"
name = "librusty-platter"
readme = "README.md"
version = "0.1.0"

[dependencies]
data-encoding = "2.1.1"
error-chain = "*"
log = "0.4.1"
ring = "0.12.1"
serde = "1.0.38"
serde_derive = "1.0.38"
serde_json = "1.0.14"

[dev-dependencies]
env_logger = "0.5.7"
tempdir = "0.3.7"

[features]
unstable = []
dev = []
