[package]
authors = ["Jayson Reis (jaysonsantos) <santosdosreis@gmail.com>"]
license = "MIT"
name = "librusty-platter"
readme = "README.md"
version = "0.1.0"
edition = "2018"

[dependencies]
data-encoding = "2.1.1"
error-chain = "0.12.0"
log = "0.4.4"
ring = "0.13.2"
serde = "1.0.71"
serde_derive = "1.0.71"
serde_json = "1.0.26"

[dev-dependencies]
env_logger = "0.6.0"
tempdir = "0.3.7"

[features]
unstable = []
dev = []
